[package]
name = "resnet-on-wasm"
description = "Resnet on Wasm"
repository = "https://github.com/pHo9UBenaA/resnet-on-wasm"
license = "MIT"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
getrandom = { version = "0.2", features = ["js"] }
image = "0.25.6"
js-sys = "0.3.77"
serde_json = "1.0.140"
tract-onnx = "0.21.11"
wasm-bindgen = { version = "0.2.100", features = ["serde", "serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3.50"
web-sys = { version = "0.3.77", features = [
    'console',
    'Window',
    'Document',
    'Request',
    'RequestInit',
    'Response',
] }
